--- a/.tool_params.yaml
+++ b/.tool_params.yaml
@@ -2,3 +2,6 @@
   parameters:
     email: karthikgmail@gmail.com
     password: karthikgmail@gmail.com
+- name: HackerNewsTool
+  parameters:
+    name: HackerNews
